--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made by Rahul (IITG) .</p>
+    <p>Made by Amogh (IITG) .</p>
   </div>
 </div>
 </body>
